--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
-OPENAI_API_KEY='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'
+# OPENAI_API_KEY='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' codebase one
+# OPENAI_API_KEY='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' my sky one
+OPENAI_API_KEY='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'
 SECRET_KEY=my-secret-key
-DATABASE_URI='postgresql://postgres:FunnelHQ@database-1.cv0om20okbqv.eu-north-1.rds.amazonaws.com:5432/Questionaire-2'
+# DATABASE_URI='postgresql://postgres:FunnelHQ@database-1.cv0om20okbqv.eu-north-1.rds.amazonaws.com:5432/Questionaire-2'
+# DATABASE_URI='sqlite:///instance/questionaire1.db'
