--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 OPENAI_API_KEY='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'
 SECRET_KEY=my-secret-key
 DATABASE_URI='postgresql://postgres:FunnelHQ@database-1.cv0om20okbqv.eu-north-1.rds.amazonaws.com:5432/Questionaire-2'
+GOOGLE_CLIENT_ID=332676638288-kfu68niebmkqv5f6gvf857cd1tlsapqg.apps.googleusercontent.com
