--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,18 @@ services:
     environment:
       OPENAI_API_KEY: ''
       SECRET_KEY: 'my-secret-key'
-      DATABASE_URI: 'sqlite:////app/instance/questionaire1.db'  
+      DATABASE_URI: 'sqlite:////app/instance/questionaire1.db'
     command: flask run --host=0.0.0.0 --port=5000
+    volumes:
+      - .:/app  # Assuming Flask app code resides in the root directory
+
+  frontend:
+    build: ./frontend
+    ports:
+      - "3000:3000"
+    command: npm start
+    volumes:
+      - ./frontend:/usr/src/frontend
 
 volumes:
   pgdata:  # Removed the PostgreSQL data volume
